--- a/api-deployment.yaml
+++ b/api-deployment.yaml
@@ -18,3 +18,10 @@ spec:
           envFrom:
             - configMapRef:
                 name: synergychat-api-configmap
+          volumeMounts:
+            - name: synergychat-api-volume
+              mountPath: /persist
+      volumes:
+        - name: synergychat-api-volume
+          persistentVolumeClaim:
+            claimName: synergychat-api-pvc
